--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aperture",
-  "version": "5.2.0",
+  "version": "5.3.1-sf.0",
   "description": "Record the screen on macOS",
   "license": "MIT",
   "repository": "wulkano/aperture-node",
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "xo && ava",
     "build": "swift build --configuration=release --static-swift-stdlib -Xswiftc '-target' -Xswiftc 'x86_64-apple-macosx10.12' && mv .build/release/aperture .",
+    "build:pack": "yarn build && yarn version --prerelease --preid sf --no-git-tag-version && yarn pack",
     "prepublish": "npm run build"
   },
   "files": [
